--- a/roles/satnogs-client/templates/etc/systemd/system/satnogs-client.service.j2
+++ b/roles/satnogs-client/templates/etc/systemd/system/satnogs-client.service.j2
@@ -5,10 +5,10 @@ After=redis-server.service
 
 [Service]
 EnvironmentFile=-/etc/default/satnogs-client
-ExecStart=/var/lib/satnogs/bin/satnogs-client
+ExecStart=/var/lib/{{ satnogs_client_user }}/bin/satnogs-client
 Restart=on-failure
-User=satnogs
-Group=satnogs
+User={{ satnogs_client_user }}
+Group={{ satnogs_client_user }}
 
 [Install]
 WantedBy=multi-user.target
