Introduce option to upgrade system packages
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/satnogs-setup/templates/etc/default/satnogs-setup.j2
+++ b/roles/satnogs-setup/templates/etc/default/satnogs-setup.j2
@@ -1,2 +1,3 @@
 SATNOGS_SETUP_ANSIBLE_URL="{{ satnogs_setup_ansible_url }}"
 SATNOGS_SETUP_ANSIBLE_BRANCH="{{ satnogs_setup_ansible_branch }}"
+SATNOGS_SETUP_RELEASE_UPGRADE_ENABLED="{{ satnogs_setup_release_upgrade_enabled | ternary('1', '0') }}"
