satnogs-radio: Do not pin package when experimental features are requested
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/satnogs-radio/templates/etc/apt/preferences.d/satnogs.j2
+++ b/roles/satnogs-radio/templates/etc/apt/preferences.d/satnogs.j2
@@ -1,3 +1,4 @@
+{% if experimental | default(false) and not satnogs_radio_gr_satnogs_version %}
 Package: gr-satnogs
 Pin: version {{ satnogs_radio_gr_satnogs_version }}
 Pin-Priority: 1001
@@ -5,3 +6,4 @@ Pin-Priority: 1001
 Package: libgnuradio-satnogs
 Pin: version {{ satnogs_radio_gr_satnogs_version }}
 Pin-Priority: 1001
+{% endif %}
