--- a/roles/satnogs-setup/templates/etc/default/satnogs-setup.j2
+++ b/roles/satnogs-setup/templates/etc/default/satnogs-setup.j2
@@ -1,4 +1,4 @@
-SATNOGS_SETUP_ANSIBLE_URL="{{ satnogs_setup_ansible_url }}"
+SATNOGS_SETUP_ANSIBLE_URL="{{ satnogs_setup_ansible_url_unstable if experimental | default(false) else satnogs_setup_ansible_url }}"
 SATNOGS_SETUP_ANSIBLE_BRANCH="{{ satnogs_setup_ansible_branch_unstable if experimental | default(false) else satnogs_setup_ansible_branch }}"
 SATNOGS_SETUP_RELEASE_UPGRADE_ENABLED="{{ satnogs_setup_release_upgrade_enabled | ternary('1', '0') }}"
 SATNOGS_SETUP_SATNOGS_CONFIG="{{ satnogs_setup_satnogs_config_venv }}/bin/{{ satnogs_setup_satnogs_config_name }}"
