--- a/roles/satnogs-radio/templates/etc/apt/preferences.d/satnogs.j2
+++ b/roles/satnogs-radio/templates/etc/apt/preferences.d/satnogs.j2
@@ -1,4 +1,4 @@
-{% if experimental | default(false) and not satnogs_radio_gr_satnogs_version %}
+{% if not experimental %}
 Package: gr-satnogs
 Pin: version {{ satnogs_radio_gr_satnogs_version }}
 Pin-Priority: 1001
