Pin 'gnuradio' version
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/satnogs-radio/templates/etc/apt/preferences.d/satnogs.j2
+++ b/roles/satnogs-radio/templates/etc/apt/preferences.d/satnogs.j2
@@ -1,4 +1,8 @@
 {% if not experimental %}
+Package: gnuradio
+Pin: version {{ satnogs_radio_gnuradio_version }}
+Pin-Priority: 1001
+
 Package: gr-satnogs
 Pin: version {{ satnogs_radio_gr_satnogs_version }}
 Pin-Priority: 1001
