--- a/roles/satnogs-radio/templates/etc/apt/preferences.d/satnogs.j2
+++ b/roles/satnogs-radio/templates/etc/apt/preferences.d/satnogs.j2
@@ -1,13 +1,5 @@
 {% if not experimental %}
-Package: gnuradio
-Pin: version {{ satnogs_radio_gnuradio_version }}
-Pin-Priority: 1001
-
-Package: gr-satnogs
-Pin: version {{ satnogs_radio_gr_satnogs_version }}
-Pin-Priority: 1001
-
-Package: libgnuradio-satnogs
-Pin: version {{ satnogs_radio_gr_satnogs_version }}
+Package: satnogs-flowgraphs
+Pin: version {{ satnogs_radio_flowgraphs_version }}
 Pin-Priority: 1001
 {% endif %}
