satnogs-radio: Pin versions of 'satnogs-flowgraphs' dependencies (fixes #89)
APT is not smart enough to install compatible dependencies. Pin
dependencies to version ranges.

Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/satnogs-radio/templates/etc/apt/preferences.d/satnogs.j2
+++ b/roles/satnogs-radio/templates/etc/apt/preferences.d/satnogs.j2
@@ -2,4 +2,22 @@
 Package: satnogs-flowgraphs
 Pin: version {{ satnogs_radio_flowgraphs_version }}
 Pin-Priority: 1001
+{% if satnogs_radio_flowgraphs_version == default_satnogs_radio_flowgraphs_version %}
+
+Package: gr-satnogs
+Pin: version {{ satnogs_radio_gr_satnogs_pin_version }}
+Pin-Priority: 1001
+
+Package: libgnuradio-satnogs
+Pin: version {{ satnogs_radio_gr_satnogs_pin_version }}
+Pin-Priority: 1001
+
+Package: gr-soapy
+Pin: version {{ satnogs_radio_gr_soapy_pin_version }}
+Pin-Priority: 1001
+
+Package: libgnuradio-soapy
+Pin: version {{ satnogs_radio_gr_soapy_pin_version }}
+Pin-Priority: 1001
+{% endif %}
 {% endif %}
