--- a/roles/satnogs/templates/etc/satnogs-setup.conf.j2
+++ b/roles/satnogs/templates/etc/satnogs-setup.conf.j2
@@ -7,3 +7,6 @@ SATNOGS_SETUP_SATNOGS_ANSIBLE_PLAYBOOK_URL={{ satnogs_setup_satnogs_ansible_play
 {% if satnogs_setup_docker_ansible_image is defined -%}
 SATNOGS_SETUP_DOCKER_ANSIBLE_IMAGE={{ satnogs_setup_docker_ansible_image | ansible.builtin.quote }}
 {% endif -%}
+{% if satnogs_setup_docker_satnogs_config_image is defined -%}
+SATNOGS_SETUP_DOCKER_SATNOGS_CONFIG_IMAGE={{ satnogs_setup_docker_satnogs_config_image | ansible.builtin.quote }}
+{% endif -%}
